<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:id="@+id/root_layout"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/weather_panel"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_city_name"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_weather"
                android:src="@mipmap/ic_launcher"
                android:layout_width="120dp"
                android:layout_height="100dp" />
            <TextView
                android:id="@+id/txt_temperature"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="8dp"
                android:textSize="50sp"
                android:textStyle="bold"
                android:text="24 C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <TextView
            android:id="@+id/txt_datetime"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="10.10.2100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TableLayout
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:stretchColumns="*"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/wind_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:background="@drawable/cell"
                    android:layout_marginLeft="8dp"
                    android:layout_column="1"
                    android:id="@+id/txt_wind"
                    android:text="Speed: 1 Deg: 1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/pressure_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:background="@drawable/cell"
                    android:layout_marginLeft="8dp"
                    android:layout_column="1"
                    android:id="@+id/txt_pressure"
                    android:text="1013.75 hpa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/humidity_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:background="@drawable/cell"
                    android:layout_marginLeft="8dp"
                    android:layout_column="1"
                    android:id="@+id/txt_humidity"
                    android:text="100%"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/sunrise_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:background="@drawable/cell"
                    android:layout_marginLeft="8dp"
                    android:layout_column="1"
                    android:id="@+id/txt_sunrise"
                    android:text="11:00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/sunset_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:background="@drawable/cell"
                    android:layout_marginLeft="8dp"
                    android:layout_column="1"
                    android:id="@+id/txt_sunset"
                    android:text="17:00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:background="@drawable/cell"
                    android:text="@string/coord_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:background="@drawable/cell"
                    android:layout_marginLeft="8dp"
                    android:layout_column="1"
                    android:id="@+id/txt_geo_coord"
                    android:text="[32.5, -89.1]"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>